// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute aptos endpoint should return success 1`] = `
{
  "data": {
    "result": 1,
  },
  "result": 1,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute aptos-df-reader endpoint should return success 1`] = `
{
  "data": {
    "result": "10568348893862534",
  },
  "result": "10568348893862534",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function endpoint should return success 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005ad789f8",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function endpoint should return success for different network 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000eead809f678d30f0",
  },
  "result": "0x000000000000000000000000000000000000000000000000eead809f678d30f0",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function endpoint should return success with parameters 1`] = `
{
  "data": {
    "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  },
  "result": "0x000000000000000000000000000000000000000000000000000000005cf7ff3b",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function-responseSelector endpoint should choose resultField over resultIndex if both specified 1`] = `
{
  "data": {
    "result": "123456789",
  },
  "result": "123456789",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function-responseSelector endpoint should fail if missing both resultField and resultIndex 1`] = `
{
  "error": {
    "message": "One of resultField and resultIndex should be present",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute function-responseSelector endpoint should return success with resultField 1`] = `
{
  "data": {
    "result": "123456789",
  },
  "result": "123456789",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute function-responseSelector endpoint should return success with resultIndex 1`] = `
{
  "data": {
    "result": "1723316672",
  },
  "result": "1723316672",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
